<resources>
    <string name="app_name">Fabric</string>
    <string name="successful_login_message">Welcome to Fabric!</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="level">Level</string>
    <string name="points">Points</string>
    <string name="challenges">Challenges</string>
    <string name="home">Home</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topics">Topics</string>
    <string name="topic">topic</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="championships">Championships</string>
    <string name="close">Close</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="single_choice">Single choice</string>
    <string name="show_image">Image</string>
    <string name="show_text">Text</string>
    <string name="challenge_description_hint">Challenge description</string>
    <string name="challenge_solution_explanation_hint">Explanation of the solution</string>
    <string name="challenge_option_hint">Enter an answer</string>
    <string name="type">Type</string>
    <string name="presentation_type">Present</string>
    <string name="select_a_level">Pick a level</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="addOption">Add answer</string>
    <string name="image_resource">Image resource</string>
    <string name="description">Description</string>
    <string name="answers">Answers</string>
    <string name="answer_text">Answer text</string>
    <string name="correct_answer">Correct answer</string>
    <string name="solution_explanation">Solution explanation</string>
    <string name="create_challenge_success">Challenge successfully added!</string>
    <string name="alert">Alert!</string>
    <string name="max_options_achieve">Maximum number of options reached</string>
    <string name="submit">Send</string>
    <string name="msg_request_answer">Please select an answer</string>
    <string name="congrats_title">ヽ(•‿•)ノ Congratulations!</string>
    <string name="apologize_title">(⌣́_⌣̀)  Sorry!</string>
    <string name="congrats_body">You answered correctly, you won %d points</string>
    <string name="apologize_body">Do not answer correctly, study and luck for the next one.</string>
    <string name="add_item">Add new item</string>
    <string name="wish">Good luck!</string>
    <string name="new_challenge">Create new challenge</string>
    <string name="notify_user_subscription_success">Congrats! You are %s for %s</string>
</resources>
