<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.japo.fabric.ui.fragments.CreateChallengeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ToggleButton
            android:id="@+id/challengePresentationTypeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/show_image"
            android:textOff="@string/show_text"
            android:showText="true"
            android:layout_alignParentLeft="true"/>

        <ToggleButton
            android:id="@+id/challengeChoiceInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/multiple_choice"
            android:textOff="@string/single_choice"
            android:showText="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="100dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/challengePhotoPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_camera"
            android:layout_alignParentRight="true"
            android:layout_marginRight="52dp"
            android:layout_centerInParent="true"
            app:elevation="6dp"
            app:fabSize="mini"
            app:pressedTranslationZ="12dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/challengeTopicsPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_format_list_bulleted"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            app:elevation="6dp"
            app:fabSize="mini"
            app:pressedTranslationZ="12dp"/>
    </RelativeLayout>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_margin_normal" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/level"
                android:layout_weight="1"
                style="@style/formLabel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/points"
                android:layout_weight="1"
                style="@style/formLabel"/>
        </TableRow>
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/challengeLevelInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/challengePointsInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="number"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
    </android.support.v7.widget.CardView>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_margin_normal" />
    <android.support.v7.widget.CardView
        android:layout_alignBottom="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/challengeDescriptionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
              >
                <EditText
                android:id="@+id/challengeDescriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/challenge_description_hint"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
            android:id="@+id/challengePhotoPreview"
            style="@style/thumbnail_lg"
            android:scaleType="fitXY"/>

            <LinearLayout
            android:id="@+id/challengeOptionsContent"
                android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <Button
                    android:id="@+id/addOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addOption"
                    android:layout_gravity="end"/>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/challengeOptionsContent">
            <EditText
            android:id="@+id/challengeSolutionExplanationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/challenge_solution_explanation_hint"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
